# hack-retro

./: .dockerignore  .gitignore  Dockerfile  README.md  manage.py  package.json  pyproject.toml
danretro/: asgi.py  settings.py  urls.py  wsgi.py
main/: consumers.py  models.py  routing.py  views.py
main/migrations/: 0001_initial.py
main/templates/: index.html
static/: index.html  main.js  retro.html
