[tool.poetry]
name = "hack-retro"
version = "0.1.0"
description = ""
authors = ["Daniel Benamy <daniel@benamy.info>"]
license = "GPL3"
readme = "README.md"
# packages = [{include = "hack_retro"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.5"
channels = "^4.0.0"
daphne = "^4.0.0"
dj-database-url = "^1.2.0"

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
flake8 = "^6.0.0"
black = "^22.12.0"
django-stubs = {extras = ["compatible-mypy"], version = "^1.14.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = "channels"
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "danretro.settings"
